# FPGAIPFilter

./: .gitignore  DE0_Nano_JTAG_RW.qar  DE0_Nano_project_JTAG.qar  DE0_Nano_project_JTAG1.qar  FPGAIPFilter.cabal  README.md  get_mem.tcl  runMemGet.sh  runQuartus.sh  stack.yaml
FPGA_CODE/: JTAG_RW_PKT_PROC.qarlog
FPGA_CODE/JTAG_RW/: DE0_Nano.sdc  DE0_Nano_project_Base.qsf  DE0_Nano_project_Base.restore.rpt  Top.vhd  counter_div.vhd  jtagif2.vhd  jtagtestrw.qsys  jtagtestrw.sopcinfo  pll_sys.vhd  qar_info.json  test_out.vhd
FPGA_CODE/JTAG_RW/db/: DE0_Nano_project_Base.cmp.rdb  DE0_Nano_project_Base.db_info  DE0_Nano_project_Base.restore.qmsg
FPGA_CODE/JTAG_RW_PKT_PROC/: DE0_Nano_project_Base.qsf  DE0_Nano_project_Base.restore.rpt  DE0_Nano_project_Base_assignment_defaults.qdf  JTAG_RW_PKT_PROC.qar  JTAG_RW_PKT_PROC.qarlog  Top.vhd  clckctrl.sopcinfo  counter_div.vhd  counter_div_trig.vhd  counter_hold.vhd  dbgram.cmp  dbgram.qip  dbgram.vhd  dbgsnap.vhd  jtagif2.vhd  jtagtestrw.qsys  jtagtestrw.sopcinfo  pll_sys.cmp  pll_sys.qip  pll_sys.vhd  pll_sys_inst.vhd  pll_sys_syn.v  qar_info.json  stp1.stp
FPGA_CODE/JTAG_RW_PKT_PROC/PacketProcessor/: packetprocessor_blockram.vhdl  packetprocessor_packetprocessor.vhdl  packetprocessor_readnew.vhdl  packetprocessor_testbench.vhdl  packetprocessor_topentity.vhdl  packetprocessor_topentity_0.vhdl  packetprocessor_types.vhdl
FPGA_CODE/JTAG_RW_PKT_PROC/PacketProcessorDF/: packetprocessordf_cnt.vhdl  packetprocessordf_cnt_j.vhdl  packetprocessordf_cnt_j_j1_j2.vhdl  packetprocessordf_moore.vhdl  packetprocessordf_packetprocessor.vhdl  packetprocessordf_testbench.vhdl  packetprocessordf_topentity.vhdl  packetprocessordf_topentity_0.vhdl  packetprocessordf_types.vhdl
FPGA_CODE/JTAG_RW_PKT_PROC/clckctrl/: clckctrl.bsf  clckctrl.cmp  clckctrl_generation_previous.rpt  clckctrl_inst.v  unnamed.cmp  unnamed.xml  unnamed_bb.v  unnamed_generation.rpt  unnamed_inst.v
FPGA_CODE/JTAG_RW_PKT_PROC/clckctrl/greybox/: clckctrl.v  unnamed.v
FPGA_CODE/JTAG_RW_PKT_PROC/clckctrl/simulation/: unnamed.sip  unnamed.vhd
FPGA_CODE/JTAG_RW_PKT_PROC/clckctrl/simulation/aldec/: rivierapro_setup.tcl
FPGA_CODE/JTAG_RW_PKT_PROC/clckctrl/simulation/submodules/: clckctrl_altclkctrl_0.v
FPGA_CODE/JTAG_RW_PKT_PROC/clckctrl/synthesis/: unnamed.debuginfo  unnamed.qip
FPGA_CODE/JTAG_RW_PKT_PROC/db/: DE0_Nano_project_Base.cmp.rdb  DE0_Nano_project_Base.db_info  DE0_Nano_project_Base.restore.qmsg  stp1_auto_stripped.stp
FPGA_CODE/JTAG_RW_PKT_PROC/jtagtestrw/: jtagtestrw.cmp
FPGA_CODE/JTAG_RW_PKT_PROC/jtagtestrw/synthesis/: jtagtestrw.debuginfo  jtagtestrw.qip  jtagtestrw.vhd
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/: DE0_Nano.sdc  DE0_Nano_project_Base.dse  DE0_Nano_project_Base.qpf  DE0_Nano_project_Base.qsf  DE0_Nano_project_Base.restore.rpt  Top.vhd  clckctrl.qsys  clckctrl.sopcinfo  counter_div.vhd  counter_hold.vhd  jtagif2.vhd
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/PacketProcessor/: packetprocessor_blockram.vhdl  packetprocessor_topentity_0.vhdl
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/PacketProcessorDF/: packetprocessordf_cnt_j_j1.vhdl  packetprocessordf_packetprocessor.vhdl  packetprocessordf_types.vhdl
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/clckctrl/: clckctrl.csv  clckctrl.html  clckctrl.spd  clckctrl.xml  clckctrl_bb.v  clckctrl_generation.rpt  clckctrl_inst.vhd  unnamed.bsf  unnamed.csv  unnamed.html  unnamed.spd  unnamed_inst.vhd
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/clckctrl/simulation/: clckctrl.sip
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/clckctrl/simulation/cadence/: cds.lib  ncsim_setup.sh
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/clckctrl/synthesis/: clckctrl.debuginfo  clckctrl.qip  clckctrl.vhd
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/db/: DE0_Nano_project_Base.cmp.rdb  DE0_Nano_project_Base.db_info  DE0_Nano_project_Base.restore.qmsg
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/jtagtestrw/: jtagtestrw.cmp
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/jtagtestrw/synthesis/: jtagtestrw.debuginfo  jtagtestrw.qip  jtagtestrw.vhd
FPGA_CODE/JTAG_RW_PKT_PROC_MOORE/test/: test_dbgsnap.vhd
app/: Main.hs  PacketProcessor.hs  PacketProcessorDF.hs
src/: JtagRW.hs
src/Lib/: JtagRW.hs
test/: FtdiTest1.hs  FtdiTestIR2.hs  FtdiTestPktProc.hs  FtdiTestPktProcMoore.hs  TestPacketProcessor.hs  TestPacketProcessorDF.hs
(+5 files in other folders)
