name:                FPGAIPFilter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tau-tao/FPGAIPFilter#readme
license:             BSD3
license-file:        LICENSE.md
author:              tau-tao
maintainer:          tau-tao@github.com
copyright:           2017 tau-tao
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     JtagRW
  other-modules:       Lib.Prelude, Lib.JtagRW
  build-depends:       base
                     , protolude >= 0.1.6 && < 0.2
                     , text
                     , bytestring
                     , bindings-libftdi
                     , lens
                     , transformers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable FPGAIPFilter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FPGAIPFilter
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable FPGAIPFilter-df
    hs-source-dirs:      app
    main-is:             PacketProcessorDF.hs
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , clash-prelude
                       , lens
                       , transformers
                       , protolude
                       , deepseq
    default-language:    Haskell2010
    default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite FPGAIPFilter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FPGAIPFilter
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable FPGAIPFilter-ftdi-test
    hs-source-dirs:      test
    main-is:             FtdiTest1.hs
    build-depends:       base
                       , FPGAIPFilter
                       , bindings-libftdi
                       , text
                       , protolude >= 0.1.6 && < 0.2
                       , bytestring
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    default-extensions:  OverloadedStrings, NoImplicitPrelude


executable FPGAIPFilter-ftdi-test-ir2
    hs-source-dirs:      test
    main-is:             FtdiTestIR2.hs
    build-depends:       base
                       , FPGAIPFilter
                       , bindings-libftdi
                       , text
                       , protolude >= 0.1.6 && < 0.2
                       , bytestring
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    default-extensions:  OverloadedStrings, NoImplicitPrelude

executable FPGAIPFilter-ftdi-test-pktproc
    hs-source-dirs:      test
    main-is:             FtdiTestPktProc.hs
    build-depends:       base
                       , FPGAIPFilter
                       , bindings-libftdi
                       , text
                       , protolude >= 0.1.6 && < 0.2
                       , bytestring
    ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
    default-extensions:  OverloadedStrings, NoImplicitPrelude


test-suite Test-PacketProcessor
    type:                exitcode-stdio-1.0
    main-is:             TestPacketProcessor.hs
    other-modules:       PacketProcessor
    build-depends:       base
                       , clash-prelude
                       , lens
                       , transformers
                       , protolude
                       , deepseq
    hs-source-dirs:      test, app
    default-language:    Haskell2010
